--- a/Develop/client/index.html
+++ b/Develop/client/index.html
@@ -26,7 +26,7 @@
      <h1> Just Another Text Editor</h1>
      
       <div class="navbar-brand">
-        <img src="../client/src/images/logo.png"
+        <img src="./src/images/icon.png"
           /></div>
     </nav>
 
